[project]
name = "networksecurity"
version = "0.1.0"
description = ""
authors = [
    {name = "Yusuf Raheem",email = "yusufraheem500@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "setuptools (>=82.0.1,<83.0.0)",
    "pymongo[srv] (>=4.17.0,<5.0.0)",
    "certifi (>=2026.4.22,<2027.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
